# pbnj

./: .gitignore  CLAUDE.md  README.md  export.json  pyproject.toml
.pbnj/: metadata.json
AdventureWorks/: README.md
AdventureWorks/.pbnj/: metadata.json
AdventureWorks/docs/: business.md  measures.md  power_query.md  relationships.md  summary.md  tables.md  technical.md
docs/: business.md  measures.md  tables.md  technical.md
src/pbnj/: __init__.py
src/pbnj/cli/: __init__.py  main.py
src/pbnj/core/: __init__.py  git_integration.py  parser.py
src/pbnj/docs/: __init__.py  generator.py
src/pbnj/templates/: __init__.py  business.md.j2  measures.md.j2  power_query.md.j2  readme.md.j2  relationships.md.j2  summary.md.j2  tables.md.j2  technical.md.j2
src/pbnj/web/: __init__.py  server.py
tests/: README.md  __init__.py  conftest.py  test_cli_main.py  test_documentation_generator.py  test_git_integration.py  test_parser.py  test_web_server.py
